# hadalized

./: .gitignore  CHANGELOG.md  README.md  justfile  prek.toml  pyproject.toml
.github/workflows/: publish.yml
src/hadalized/: __init__.py  __main__.py  base.py  cache.py  color.py  config.py  const.py  homedirs.py  options.py  palette.py  web.py  writer.py
src/hadalized/cli/: __init__.py  main.py  ruff.toml
src/hadalized/templates/: neovim.lua
tests/: conftest.py  ruff.toml  smoke_test.py  test_cache.py  test_cli.py  test_color.py  test_config.py  test_config.toml  test_homedirs.py  test_hue.py  test_palette.py  test_parser.py  test_template.py  test_web.py  test_writer.py
