[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"


[project]
name = "hadalized"
version = "0.4.1"
description = "Hadalized color theme builder."
readme = "README.md"
authors = [
    { name = "Shawn O'Hare", email = "shawn@shawnohare.com" }
]
requires-python = ">=3.14"
keywords = [
    "colorscheme", "colortheme", "oklch",
]
classifiers = [
  # "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT-0 License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Application Color Themes",
]
license = "MIT-0"
license-files = [
  "LICENSE",

]
dependencies = [
    "coloraide>=6.2",
    "cyclopts>=4.5.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "luadata>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tomli-w>=1.2.0",
    "xdg-base-dirs>=6.0.2",
]

[project.urls]
Repository = "https://github.com/shawnohare/hadalized"
# Documentation = "https://docs.{domain}.com/hadalized"
Changelog = "https://github.com/shawnohare/hadalized/blob/main/CHANGELOG.md"
Releases = "https://github.com/shawnohare/hadalized/releases"
# Discord = "https://discord.gg/hadalized"

[project.scripts]
hadalized = "hadalized.__main__:app"
hdl = "hadalized.__main__:app"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
# add --cov-report=html to also get html
addopts = "--cov-report=term-missing --cov=src -vvv -ra -q"
testpaths = [
    "tests",
]

[tool.coverage.report]
# include = ["src/hadalized/*.py"]
omit = ["src/hadalized/__main__.py"]

[tool.ruff.lint]
# select = ["ALL"]
preview = true
select = [
    "A",        # detect shadowed builtins
    "B",        # flake bugbear
    "BLE",      # disallow catch-all exceptions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "C90",      # mccabe complexity checks
    "D",        # Docstring style
    "DOC",      # Docstring linting
    "DTZ",      # require strict timezone manipulation with datetime
    "E",        # PyCodeStyle errors
    "F",        # Pyflakes rules
    "FA",       # Enforce from __future__ import annotations
    "FBT",      # detect boolean traps
    "FURB",     # refurb
    "I",        # Sort imports properly
    "ICN",      # Use common import conventions
    "ISC",      # Good use of string concatenation
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "NPY",      # Some numpy-specific things"COM", # enforce trailing comma rules
    "PERF",     # performance linting
    "PLE",      # pylint errors
    "PLR",      # pylint refactor
    "PLW",      # pylint warnings
    "PT",       # pytest style
    "PTH",      # Use pathlib instead of os.path
    "PYI",      # Some typing annotation checks
    "PIE",      # Some unnecessary operators
    "Q",        # quotes
    "RET",      # Good return practices
    "RUF",      # Ruff specific rules
    "S",        # disallow things like "exec"; also restricts "assert"
    "SIM",      # Common simplification rules
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    # "TD",       # Be diligent with TODO comments
    "TID",      # Some good import practices
    # "TRY",      # exception style
    "UP",       # Warn if certain things can changed due to newer Python versions
    "W",        # PyCodeStyle warnings
]
ignore = [
    "D203",  # Conflicts with google style docstrings and D211
    "D213",  # Conflicts with google style docstrings and D212
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",     # asserts allowed in tests...
    "ARG",      # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",      # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004",  # magic numbers are ok
    "PT011",    # pytest.raises(ValueError) is ok
]

[tool.ruff.format]
preview = true

[[tool.uv.index]]
# use via uv publish --index=testpypi
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
# use via uv publish --index=testpypi
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
